--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,41 @@
   color: #61dafb;
 }
 
+.img-wrapper img {
+  width: 100px;
+  margin-top: -10%;
+}
+
+.cart-wrapper {
+  height: 150px;
+  width: 500px;
+  border: 1px solid #ccc;
+  margin-left: 10%;
+}
+
+.btn-wrapper button {
+  background-color: green;
+  border: 0px;
+  padding: 10px;
+  border-radius: 4px;
+  color: #fff;
+  box-shadow: #333 0px 1px 4px;
+}
+
+.item {
+  float: left;
+  /* display: inline-block; */
+  width: 120px;
+  padding: 20px;
+}
+
+.add-to-cart img {
+  width: 80px;
+  position: absolute;
+  right: 1%;
+  top: 1%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
